--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#d60000</color>
+    <color name="colorPrimaryDark">#970000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background">#8a0000</color>
+    <color name="bt_background">#2E2E2E</color>
+    <color name="bt_noconn">#d60000</color>
+    <color name="bt_conn">#01DF01</color>
+
+
+
 </resources>
